add_subdirectory(library/libfdr)

add_executable(test1 testprufercode.c)
add_executable(test2 TestLienthong.c)
add_executable(test3 testdjkstra.c)
add_executable(test4 testfathercode.c)
add_executable(test5 cay_bao_trum_prim.c)
add_executable(test6 testkruskal.c)
add_executable(test7 test_bfs_dfs.c)
target_link_libraries(test1 fdr)
target_link_libraries(test2 fdr)
target_link_libraries(test3 fdr)
target_link_libraries(test4 fdr)
target_link_libraries(test5 fdr)
target_link_libraries(test6 fdr)
target_link_libraries(test7 fdr)
